--- a/pages/plataforma.html
+++ b/pages/plataforma.html
@@ -9,7 +9,6 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="sweetalert2.min.css">
     <title>CourseMaster - Cursos</title>
 </head>
 
@@ -40,37 +39,21 @@
 
             <nav>
                 <a href="../index.html">Home</a>
-                <a href="./cursos.html" style="color: #FF5858; text-decoration: overline;">Cursos</a>
-                <a href="./plataforma.html">Plataforma</a>
-                <a href="./pages/carrito.html"><i class="fa-solid fa-cart-shopping"></i> 1</a>
+                <a href="./cursos.html">Cursos</a>
+                <a href="./plataforma.html" style="color: #FF5858; text-decoration: overline;">Plataforma</a>
+                <a href="./carrito.html"><i class="fa-solid fa-cart-shopping"></i> 1</a>
             </nav>
         </div>
 
     </header>
 
 
-    <section class="secciones">
-        <button id="programacion">Programacion</button>
-        <button id="cripto">Criptomonedas</button>
-        <button id="ciberseguridad">Ciberseguridad</button>
-        <button id="diseño">Diseño grafico</button>
-    </section>
-
-    <section class="js-secciones-cursos">
-        <!-- <div class="js-seccion-design">
-            <h2>Javascript</h2>
-            <img src="../img/javascript.png" alt="javascript">
-            <p>Precio: $40.000</p>
-        </div> -->
-    </section>
-
-
-
+    
     <!-- Script JS -->
     <script src="../js/script.js"></script>
     <!-- Fontawesome -->
     <script src="https://kit.fontawesome.com/41ca4c84cd.js" crossorigin="anonymous"></script>
- <!-- Bootstrap -->
+    <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
