--- a/pages/python.html
+++ b/pages/python.html
@@ -9,7 +9,6 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="sweetalert2.min.css">
     <title>CourseMaster - Cursos</title>
 </head>
 
@@ -41,36 +40,40 @@
             <nav>
                 <a href="../index.html">Home</a>
                 <a href="./cursos.html" style="color: #FF5858; text-decoration: overline;">Cursos</a>
-                <a href="./plataforma.html">Plataforma</a>
-                <a href="./pages/carrito.html"><i class="fa-solid fa-cart-shopping"></i> 1</a>
+                <a href="#">Bootcamp</a>
             </nav>
         </div>
 
     </header>
 
 
-    <section class="secciones">
-        <button id="programacion">Programacion</button>
-        <button id="cripto">Criptomonedas</button>
-        <button id="ciberseguridad">Ciberseguridad</button>
-        <button id="diseño">Diseño grafico</button>
+    <section class="python">
+        <div class="py1">
+            <h2>Curso de Python</h2>
+            <img src="../img/python.png" alt="python">
+            <button>Ver programa</button>
+        </div>
+
+        <div class="py2">
+            <h3><i class="fa-solid fa-check"></i> Clases grabadas</h3>
+            <h3><i class="fa-solid fa-check"></i> Descarga de material pdf</h3>
+            <h3><i class="fa-solid fa-check"></i> Anfitriones a tu disposicion</h3>
+            <div class="py-price">
+                <p>$30.000</p>
+                <button id="boton-agregar" ><i class="fa-solid fa-cart-shopping"></i></button>
+            </div>
+
+        </div>
     </section>
 
-    <section class="js-secciones-cursos">
-        <!-- <div class="js-seccion-design">
-            <h2>Javascript</h2>
-            <img src="../img/javascript.png" alt="javascript">
-            <p>Precio: $40.000</p>
-        </div> -->
-    </section>
-
-
-
+    
+    <!-- Sweetalert -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Script JS -->
-    <script src="../js/script.js"></script>
+    <script type="text/javascript" src="../js/python.js"></script>
     <!-- Fontawesome -->
     <script src="https://kit.fontawesome.com/41ca4c84cd.js" crossorigin="anonymous"></script>
- <!-- Bootstrap -->
+    <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
