--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -65,6 +65,28 @@
     </section>
 
 
+    <footer>
+        <div class="fooflex">
+            <div class="redes">
+                <h3>Nuestras redes</h3>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-discord"></i>
+            </div>
+            
+        <div class="ubication">
+            <h3>Oficina ubicada en</h3>
+            <p>📍Av. Libertador 3500, CABA.</p>
+        </div>
+
+    </div>
+    <div class="foorow">
+        <h3>Contactanos</h3>
+        <p>📧 contacto@CourserMaster.com</p>
+        <p>📱+54-11-2406-1642</p>
+    </div>
+        
+    </footer>
 
     <!-- Script JS -->
     <script src="../js/script.js"></script>
