--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -65,6 +65,10 @@
     </section>
 
 
+    <section class="whatsapp">
+        <img src="../img/whatsapp.png" alt="whatsapp">
+    </section>
+
     <footer>
         <div class="fooflex">
             <div class="redes">
