--- a/pages/plataforma.html
+++ b/pages/plataforma.html
@@ -47,6 +47,9 @@
 
     </header>
 
+    <section class="whatsapp">
+        <img src="../img/whatsapp.png" alt="whatsapp">
+    </section>
 
 
     <footer>
