--- a/pages/python.html
+++ b/pages/python.html
@@ -67,6 +67,11 @@
     </section>
 
 
+    <section class="whatsapp">
+        <img src="../img/whatsapp.png" alt="whatsapp">
+    </section>
+
+
     <footer>
         <div class="fooflex">
             <div class="redes">
