--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
     </div>
     </section>
 
+    <section class="whatsapp">
+        <img src="./img/whatsapp.png" alt="whatsapp">
+    </section>
 
     <footer>
         <div class="fooflex">
