--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
                 <a href="./index.html" style="color: #FF5858; text-decoration: overline;">Home</a>
                 <a href="./pages/cursos.html">Cursos</a>
                 <a href="./pages/plataforma.html">Plataforma</a>
-                <a href="./pages/carrito.html"><i class="fa-solid fa-cart-shopping"></i> 1</a>
             </nav>
         </div>
 
@@ -53,7 +52,7 @@
         </div>
 
         <div class="certext">
-            <h2>Certificate en CourserMaster</h2>
+            <h2>Certificate en CourseMaster</h2>
             <p><i class="fa-solid fa-check"></i> Certificado legalizado y regularizado.</p>
             <p><i class="fa-solid fa-check"></i> Salida laboral rapida.</p>
             <p><i class="fa-solid fa-check"></i> Bolsa de trabajo amplia en CoderCAMP.</p>
