--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -41,7 +41,7 @@
             <nav>
                 <a href="../index.html">Home</a>
                 <a href="./cursos.html" style="color: #FF5858; text-decoration: overline;">Cursos</a>
-                <a href="./plataforma.html">Plataforma</a>
+                <a href="./plataforma.html"><i class="fa-solid fa-user"></i> Plataforma</a>
             </nav>
         </div>
 
@@ -52,7 +52,7 @@
         <button id="programacion">Programacion</button>
         <button id="cripto">Criptomonedas</button>
         <button id="ciberseguridad">Ciberseguridad</button>
-        <button id="diseño">Diseño grafico</button>
+        <!-- <button id="diseño">Diseño grafico</button> -->
     </section>
 
     <section class="js-secciones-cursos">
