--- a/pages/python.html
+++ b/pages/python.html
@@ -40,7 +40,7 @@
             <nav>
                 <a href="../index.html">Home</a>
                 <a href="./cursos.html" style="color: #FF5858; text-decoration: overline;">Cursos</a>
-                <a href="#">Bootcamp</a>
+                <a href="./plataforma.html"><i class="fa-solid fa-user"></i> Plataforma</a>
             </nav>
         </div>
 
