--- a/pages/criptomonedas.html
+++ b/pages/criptomonedas.html
@@ -40,7 +40,7 @@
             <nav>
                 <a href="../index.html" style="color: #FF5858; text-decoration: overline;">Home</a>
                 <a href="./cursos.html">Cursos</a>
-                <a href="./plataforma.html">Plataforma</a>
+                <a href="./plataforma.html"><i class="fa-solid fa-user"></i> Plataforma</a>
             </nav>
         </div>
 
