--- a/pages/plataforma.html
+++ b/pages/plataforma.html
@@ -40,7 +40,7 @@
             <nav>
                 <a href="../index.html">Home</a>
                 <a href="./cursos.html">Cursos</a>
-                <a href="./plataforma.html" style="color: #FF5858; text-decoration: overline;">Plataforma</a>
+                <a href="./plataforma.html" style="color: #FF5858; text-decoration: overline;"><i class="fa-solid fa-user"></i> Plataforma</a>
             </nav>
         </div>
 
