--- a/pages/plataforma.html
+++ b/pages/plataforma.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <title>CourseMaster - Cursos</title>
 </head>
@@ -51,6 +52,19 @@
     </section>
 
 
+    <section class="login">
+        <h2 style="color: #fff; font-size: 1em;">Ingresar</h2>
+        <div class="logg">
+            <label for="email">Email</label>
+            <input type="text" id="email">
+            <label for="password">Contraseña</label>
+            <input type="password" id="password">
+            <p>Recuperar contraseña</p>
+            <button id="ingresar">Ingresar</button>
+        </div>
+    </section>
+
+
     <footer>
         <div class="fooflex">
             <div class="redes">
@@ -73,9 +87,11 @@
     </div>
         
     </footer>
-    
+
+    <!-- Toastify -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <!-- Script JS -->
-    <script src="../js/script.js"></script>
+    <script src="../js/login.js"></script>
     <!-- Fontawesome -->
     <script src="https://kit.fontawesome.com/41ca4c84cd.js" crossorigin="anonymous"></script>
     <!-- Bootstrap -->
