--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <nav>
                 <a href="./index.html" style="color: #FF5858; text-decoration: overline;">Home</a>
                 <a href="./pages/cursos.html">Cursos</a>
-                <a href="./pages/plataforma.html"><i class="fa-solid fa-user"></i> Plataforma</a>
+                <a href="./pages/login.html"><i class="fa-solid fa-user"></i> Plataforma</a>
             </nav>
         </div>
 
