--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -41,7 +41,7 @@
             <nav>
                 <a href="../index.html">Home</a>
                 <a href="./cursos.html" style="color: #FF5858; text-decoration: overline;">Cursos</a>
-                <a href="./plataforma.html"><i class="fa-solid fa-user"></i> Plataforma</a>
+                <a href="./login.html"><i class="fa-solid fa-user"></i> Plataforma</a>
             </nav>
         </div>
 
