--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
         <p>Como debo aplicar mi solicitud</p>
         <div class="beca">
             <p>La beca consiste en pasar un prep-course antes de ingresar al curso de forma definitiva, es decir, te brindaremos material teorico y practico sobre la introduccion segun la carrera que elijas. <br> Por ejemplo; En el mundo de la programacion, deberas aprender su introduccion, conceptos basicos y como aplicar los codigos.</b3></p>
-            <button>Aplicar ahora</button>
+            <a href="./pages/contacto.html"><button >Aplicar ahora</button></a>
+            
         </div>
     </section>
 
